test/MC/SVE/regression-tests/negative_tests/sve-sqadd-019.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS8QAddVIX
// Immediate not compatible with encode/decode function.
sqadd z6.b, z6.b, #257
// CHECK: error: immediate must be an integer in range [0, 255] or a multiple of 256 in range [256, 65280]
